--- a/dkms.conf
+++ b/dkms.conf
@@ -2,5 +2,12 @@ PACKAGE_NAME="r8125"
 PACKAGE_VERSION="@PKGVER@"
 BUILT_MODULE_NAME[0]="${PACKAGE_NAME}"
 DEST_MODULE_LOCATION[0]="/updates/dkms"
+MAKE[0]="make -C $kernel_source_dir \
+    M=$dkms_tree/$PACKAGE_NAME/$PACKAGE_VERSION/build \
+    CONFIG_ASPM=n \
+    ENABLE_MULTIPLE_TX_QUEUE=y \
+    ENABLE_PTP_SUPPORT=y \
+    ENABLE_RSS_SUPPORT=y \
+    modules"
 AUTOINSTALL="YES"
 BUILD_EXCLUSIVE_CONFIG="CONFIG_PCI"
